--- a/exercicios/1-CSS/1.md
+++ b/exercicios/1-CSS/1.md
@@ -48,3 +48,8 @@ As instruções passadas para gerar o currículos, conforme a *Figura 1*, são:
 **INSTRUÇÃO 5.** Na região de classe `profile-detail`, as tabelas devem ser centralizada, com uma largura de 90% e margem inferior de `30px`;
 
 **INSTRUÇÃO 6.** Também na região de classe `profile-detail`, a célula de classe `title` deve possuir tamanho de `1.1em` e largura de `90%`. Já a célula de classe `last-cell` deve possuir um recúo interno inferior de `5px` e bordar inferior de `1px solid #e6e9ec`.
+
+## Entrega
+As resposta do exercício (arquivos css) devem ser enviadas junto ao pacote completo contendo os dados do site para o seguinte formulário: https://goo.gl/forms/2xl3PYiENO7K0ARm2
+
+Prazo: 15/08/2018 - 17:59
