--- a/exercicios/2-Javascript1/2.md
+++ b/exercicios/2-Javascript1/2.md
@@ -3,7 +3,8 @@
 * * *
 
 1) Escreva uma função que leia três valores numéricos a partir de variáveis e retorne uma cor no formato hexadecimal usado em CSS. Aplique a função para colorir algum elemento HTML.
-Exemplo: vermelho 255, verde 9, azul 128 = #FF0980
+Exemplo: vermelho 255, verde 9, azul 128 = #FF0980
+
 Dica: d.toString(16) retorna o valor hexadecimal de d. Note que será necessário concatenar '0' ao inicio de valores <= 9 para cada cor.
 
 2) Modifique a questão anterior, chamando a função usando 3 valores lidos a partir de caixas de mensagem.
@@ -12,9 +13,9 @@ Dica: d.toString(16) retorna o valor hexadecimal de d. Note que será necessári
 * Campos de x, y, altura, largura e cor
 * Um método para modificar a cor (você pode adaptar a função usada na questão 2)
 * Metodos para calcular:
-› Perímetro
-› Área
-› Diagonal (dica: Math.sqrt)
+  - Perímetro
+  - Área
+  - Diagonal (dica: Math.sqrt)
 * Um método para adicionar visualmente o retângulo ao documento, usando a tag <div> + CSS
 
 * * *
