Adição de formulário para submissão do exercicio e exemplos

--- a/exercicios/2-Javascript1/2.md
+++ b/exercicios/2-Javascript1/2.md
@@ -18,4 +18,10 @@ Exemplo: vermelho 255, verde 9, azul 128 = #FF0980
   - Diagonal (dica: Math.sqrt)
 * Um método para adicionar visualmente o retângulo ao documento, usando a tag div + CSS
 
+Prazo de entrega:
+12-set (quarta), 23:59
+
+Para submeter as respostas, preencha o [formulário](https://goo.gl/forms/uue0enqK9TKhr4t52).
+
+
 * * *
